--- a/SLC-Dental/styles.css
+++ b/SLC-Dental/styles.css
@@ -21,23 +21,25 @@ html, body {
     font-size: 11px;
     padding: 4px;
     background: #004E8E;
+    @media: min-width:1200px;
     
     
 }
 .address{
     height: auto;
-    width: 60%;
+    width: 50%;
     color: #FFF;
     font-family: sans-serif;
     font-size: 11px;
     padding: 4px;
     background: #004E8E;
     display: inline-block;
+    text-align: right;
     
 }
 .phone{
     height: auto;
-    width: 20%;
+    width: 10%;
      margin: 0 auto;
     color: #FFF;
     font-family: sans-serif;
@@ -45,6 +47,7 @@ html, body {
     padding: 4px;
     background: #004E8E;
     display: inline-block;
+    text-align: center;
 }
 .social__media{
     height: auto;
